<resources>
    <string name="app_name">Shapee Clound</string>
    <string name="shapee_clound">Shapee Clound</string>
    <string name="welcome">Welcome to</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="login">Login</string>
    <string name="message">Message</string>
    <string name="slogan_app">Stay hungry, stay foolish</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="user">User</string>
    <string name="dont_have_account">If you don\'t account, please sign up</string>
    <string name="hint_search">Enter task</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already have an account?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_stats">My stats</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="remember">Remember password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="tasks">Tasks</string>
    <string name="attachment">Attachment</string>
    <string name="logout">Logout</string>
    <string name="enter">Enter</string>
    <string name="enter_token">Enter token</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="empty">Empty</string>
    <string name="point">Score: %s</string>
    <string name="des">Description: %s</string>
    <string name="team">Teams: %s</string>
    <string name="feedback">Watch Feedback</string>
    <string name="duedate">Due date: %s</string>
    <string name="submit">Submit</string>
    <string name="morning_13h_17h">Afternoon: 13h - 17h</string>
    <string name="morning_8h_12h">Morning: 8h - 12h</string>
    <string name="people">People: %s</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="permission_failed_title">Permission not allow</string>
    <string name="permission_failed_message">Permission is not allowed. Please go to the setting and enabled this permission for uploading</string>
    <string name="ok">Ok</string>
</resources>