<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic__education"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primarySecond" />

        <LinearLayout
            android:id="@+id/llTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shapee_clound"
                android:textColor="@color/textPrimary"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clFormLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_15"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTitleLogin">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_email"
                android:background="@drawable/bg_input"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/dimen_48"
                android:paddingHorizontal="@dimen/dimen_15"
                android:textColor="@color/text_small"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:autofillHints="@string/enter_email"
                android:background="@drawable/bg_input"
                android:hint="@string/enter_user_name"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/dimen_48"
                android:paddingHorizontal="@dimen/dimen_15"
                android:textColor="@color/text_small"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginBottom="@dimen/dimen_24"
                android:autofillHints="@string/enter_email"
                android:background="@drawable/bg_input"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="@dimen/dimen_48"
                android:paddingHorizontal="@dimen/dimen_15"
                android:textColor="@color/text_small"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_24"
                android:autofillHints="@string/enter_email"
                android:background="@drawable/bg_input"
                android:hint="@string/enter_password_again"
                android:inputType="textPassword"
                android:minHeight="@dimen/dimen_48"
                android:paddingHorizontal="@dimen/dimen_15"
                android:textColor="@color/text_small"
                android:textSize="@dimen/text_14" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegister"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_24"
        android:background="@drawable/bg_login"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17"
        app:layout_constraintBottom_toTopOf="@+id/clsContainer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_login"
            android:minHeight="@dimen/dimen_24"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>