<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clsForgot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_48"
            app:tint="@color/primarySecond"
            android:src="@drawable/ic__education"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shapee_clound"
                android:textColor="@color/textPrimary"
                android:textSize="32sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_64"
            android:autofillHints="@string/enter_email"
            android:background="@drawable/bg_input"
            android:layout_marginHorizontal="@dimen/dimen_15"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/dimen_48"
            android:paddingHorizontal="@dimen/dimen_15"
            android:textColor="@color/text_small"
            android:textSize="@dimen/text_14"
            app:layout_constraintTop_toBottomOf="@id/llTitleLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnReset"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginBottom="150dp"
        android:background="@drawable/bg_login"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17"
        app:layout_constraintTop_toBottomOf="@id/clsForgot" />

</androidx.constraintlayout.widget.ConstraintLayout>